# audio-notify-server

./: CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint.sh  no-ignores.sh  no-pkill.sh  protect-claude-dir.sh  test.sh
examples/: notify-turn-hook.py  notify-turn-hook.sh
src/audio_notify_server/: __init__.py  cli.py  config.py  logging.py  process.py  server.py  sound.py  tts.py
tests/: __init__.py  test_notify_hook.py  test_server.py
