[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-notify-server"
version = "0.1.0"
description = "A lightweight local notification server for remote task completion alerts"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["notification", "server", "alert", "sound", "tts"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
audio-notify-server = "audio_notify_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_notify_server"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check ."
format = "ruff format ."

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
# D203 and D213 conflict with D211 and D212 respectively - must choose one style
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
# S101: allow assert statements in tests (pytest idiom)
"tests/*" = ["S101"]
# S603: subprocess calls are safe - using hardcoded commands with shell=False
"src/audio_notify_server/sound.py" = ["S603"]
"src/audio_notify_server/tts.py" = ["S603"]
